| Bug #27843 | ndb: read of pseudo column that does not exist is ignored in dbtup | ||
|---|---|---|---|
| Submitted: | 16 Apr 2007 8:01 | Modified: | 7 May 2009 15:11 |
| Reporter: | Tomas Ulin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[16 Apr 2007 8:01]
Tomas Ulin
[6 May 2009 20:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/73532 2915 Jonas Oreland 2009-05-06 ndb - bug#27843 read of unknow pseudo column returns null changed to trigger error instead (kind of useless bug, but I want to restart pb)
[6 May 2009 21:00]
Bugs System
Pushed into 5.1.32-ndb-6.3.25 (revid:jonas@mysql.com-20090506205421-ut4jsxgkx359i5bh) (version source revid:jonas@mysql.com-20090506205421-ut4jsxgkx359i5bh) (merge vers: 5.1.32-ndb-6.3.25) (pib:6)
[6 May 2009 21:01]
Bugs System
Pushed into 5.1.32-ndb-7.0.6 (revid:jonas@mysql.com-20090506205713-4jgi3holviuz99q5) (version source revid:jonas@mysql.com-20090506205713-4jgi3holviuz99q5) (merge vers: 5.1.32-ndb-7.0.6) (pib:6)
[6 May 2009 21:02]
Bugs System
Pushed into 5.1.32-ndb-6.2.18 (revid:jonas@mysql.com-20090506204658-x9a9hiuiex2wxtjc) (version source revid:jonas@mysql.com-20090506204658-x9a9hiuiex2wxtjc) (merge vers: 5.1.32-ndb-6.2.18) (pib:6)
[7 May 2009 15:11]
Jon Stephens
Documented bugfix in the NDB-6.2.18, 6.3.25, and 7.0.6 changelogs as follows:
It was theoretically possible for the value of a nonexistent
column to be read as NULL, rather than causing an error.
