ndb - bug#27843   read of unknow pseudo column returns null   changed to trigger error instead

(kind of useless bug, but I want to restart pb)